--- a/public/locales/en/home-page.json
+++ b/public/locales/en/home-page.json
@@ -1,21 +1,17 @@
 {
   "form": {
     "event-title": {
-      "placeholder": "Enter a title for the event",
-      "error": "Enter a title for the event"
+      "placeholder": "Enter a title for the event"
     },
     "name": {
-      "placeholder": "Enter your name",
-      "error": "Enter your name"
+      "placeholder": "Enter your name"
     },
     "number": {
-      "placeholder": "Select the number of people",
-      "error": "Select the number of people"
+      "placeholder": "Select the number of people"
     },
     "event-date": {
       "title": "Select a start date and end date",
-      "description": "You can select up to 7 days.",
-      "error": "Select a start date and end date"
+      "description": "You can select up to 7 days."
     },
     "event-time": {
       "title": "Select a time",
@@ -23,12 +19,10 @@
       "pm": "PM",
 
       "start": {
-        "label": "From",
-        "error": "Select a start time"
+        "label": "From"
       },
       "end": {
-        "label": "To",
-        "error": "Select an end time"
+        "label": "To"
       }
     }
   },
