--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -32,9 +32,13 @@
       "message": "약속을 다시 확인해주세요"
     }
   },
+
   "error": {
-    "create-participant": {
-      "message": "참여자 생성에 실패하였습니다"
-    }
+    "change-event-title": "약속 제목을 입력해주세요",
+    "change-event-name": "이름을 입력해주세요",
+    "change-event-number": "인원을 입력해주세요",
+    "change-event-date": "날짜를 입력해주세요",
+    "change-event-start-time": "시작 시간을 입력해주세요",
+    "change-event-end-time": "종료 시간을 입력해주세요"
   }
 }
